Feature/ios support (#83)
* Add endpoints for mobile/ios

* Add ios redirect url
