# api-definition.yml
@@ -64,6 +64,79 @@ paths:
               schema:
                 type: string
                 example: stereodose_session=abcde12345; Path=/;
+                
+  '/auth/token-swap':
+    get:
+      description: >
+        TokenSwap was created to support the iOS app.
+        The Spotify iOS documentation refers to a "token swap" API endpoint which is essentially
+        the same as the OAuth callback or redirect URL.
+        The difference here is that instead of 302 redirecting on the callback,
+        we simply return a 200 response with the JSON returned from the Spotify code exchange
+      tags:
+        - auth
+      parameters: 
+        - in: query
+          name: code
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: successfully exchanged authorization code for access tokens
+          headers:
+            Set-Cookie:
+              schema:
+                type: string
+                example: stereodose_session=abcde12345; Path=/;
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  access_token:
+                    type: string
+                  token_type:
+                    type: string
+                  scope:
+                    type: string
+                  expires_in:
+                    type: string
+                  refresh_token:
+                    type: string
+                    
+  '/auth/mobile-login':
+    post:
+      description: >
+        MobileLogin is here to support the iOS app.
+        Because Spotify basically constrains iOS developers to using only their SDK
+        and not the WebAPI for authentication, we have to create this seperate endpoint
+        It will take a Spotify access token, and then create a Stereodose session.
+        The response is simply a 200 and a set-cookie header
+      tags:
+        - auth
+      requestBody:
+        description: Create a new Stereodose playlist
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                access_token:
+                  type: string
+      responses:
+        200:
+          description: The cookie returned can be used as an API key for subsequent requests
+          headers:
+            Set-Cookie:
+              schema:
+                type: string
+                example: stereodose_session=abcde12345; Path=/;
+              
+      
+                    
+                  
 
   '/auth/refresh':
     get:
